[gd_scene load_steps=20 format=3 uid="uid://2sb25nigkhhn"]

[ext_resource type="Script" uid="uid://b86m4m8oakkht" path="res://Testing/battle.gd" id="1_e41k2"]
[ext_resource type="Resource" uid="uid://d1jvn8s0i3ln4" path="res://Testing/characters/warrior/warrior.tres" id="4_1sdae"]
[ext_resource type="PackedScene" uid="uid://bers3xuynsf1y" path="res://Testing/card_target_selector.tscn" id="5_e41k2"]
[ext_resource type="Script" uid="uid://b5sw2oybcoa81" path="res://Testing/hand.gd" id="6_o617d"]
[ext_resource type="Script" uid="uid://dkmpxvqwsr262" path="res://Testing/battle_ui.gd" id="7_o617d"]
[ext_resource type="Script" uid="uid://6phfh6l1w5hf" path="res://Testing/player_handler.gd" id="7_odhhd"]
[ext_resource type="Texture2D" uid="uid://bgwwfj51cmsrv" path="res://Assets/2D Assets/Gaslight.png" id="10_1sdae"]
[ext_resource type="PackedScene" uid="uid://c6qs4x6qw8jit" path="res://Testing/mana_ui.tscn" id="10_55wsm"]
[ext_resource type="PackedScene" uid="uid://i5rcdxvoxm0y" path="res://Testing/token_ui.tscn" id="10_odhhd"]
[ext_resource type="PackedScene" uid="uid://b8gigwoqmugpq" path="res://Testing/warning_ui.tscn" id="11_1sdae"]
[ext_resource type="PackedScene" uid="uid://csnhxuug4haax" path="res://Testing/card_pile_opener.tscn" id="11_e41k2"]
[ext_resource type="PackedScene" uid="uid://v3v1nx7sdiih" path="res://Testing/tooltip.tscn" id="11_odhhd"]
[ext_resource type="Theme" uid="uid://cf6tc5ho148e8" path="res://Testing/main_theme.tres" id="12_1sdae"]
[ext_resource type="Texture2D" uid="uid://c1qywtoxjpec1" path="res://Assets/2D Assets/Discard.png" id="12_jtj6a"]
[ext_resource type="Texture2D" uid="uid://bntauqn0c0bs8" path="res://Assets/2D Assets/DiscardHover.png" id="13_6vt2j"]
[ext_resource type="PackedScene" uid="uid://djjdlrokoqg5y" path="res://Testing/card_pile_view.tscn" id="16_m0ppn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m0ppn"]
size = Vector2(1921, 734.5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_odhhd"]
bg_color = Color(0.108, 0.72, 0.1794, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)

[sub_resource type="Theme" id="Theme_1sdae"]
Button/colors/font_color = Color(0, 0, 0, 1)
Button/colors/font_disabled_color = Color(0, 0, 0, 1)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_color = Color(0, 0, 0, 1)
Button/colors/font_hover_pressed_color = Color(0, 0, 0, 1)
Button/colors/font_outline_color = Color(1, 1, 1, 1)
Button/colors/font_pressed_color = Color(0, 0, 0, 1)
Button/colors/icon_disabled_color = Color(0, 0, 0, 1)
Button/colors/icon_focus_color = Color(0, 0, 0, 1)
Button/colors/icon_hover_color = Color(0, 0, 0, 1)
Button/colors/icon_hover_pressed_color = Color(0, 0, 0, 1)
Button/colors/icon_normal_color = Color(0, 0, 0, 1)
Button/colors/icon_pressed_color = Color(0, 0, 0, 1)
Button/constants/align_to_largest_stylebox = 0
Button/constants/h_separation = 0
Button/constants/icon_max_width = 0
Button/constants/outline_size = 0
Button/font_sizes/font_size = 36
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = null
Button/styles/normal = SubResource("StyleBoxFlat_odhhd")
Button/styles/pressed = null

[node name="TestingMain" type="Node2D"]
script = ExtResource("1_e41k2")
char_stats = ExtResource("4_1sdae")

[node name="CardDropArea" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CardDropArea"]
position = Vector2(959.5, 366.75)
shape = SubResource("RectangleShape2D_m0ppn")
debug_color = Color(0, 0.595, 0.7, 0.0666667)

[node name="CardTargetSelector" parent="." instance=ExtResource("5_e41k2")]

[node name="PlayerHandler" type="Node" parent="." node_paths=PackedStringArray("hand")]
script = ExtResource("7_odhhd")
hand = NodePath("../BattleUI/Hand")

[node name="BattleUI" type="CanvasLayer" parent="." groups=["ui_layer"]]
script = ExtResource("7_o617d")

[node name="Hand" type="HBoxContainer" parent="BattleUI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -384.0
offset_top = -240.0
offset_right = 384.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
script = ExtResource("6_o617d")

[node name="ManaUI" parent="BattleUI" instance=ExtResource("10_55wsm")]
visible = false
char_stats = ExtResource("4_1sdae")

[node name="Tooltip" parent="BattleUI" instance=ExtResource("11_odhhd")]
offset_top = 52.0
offset_bottom = 260.0

[node name="EndTurnButton" type="Button" parent="BattleUI"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1890.0
offset_top = -887.0
offset_right = -1615.0
offset_bottom = -795.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("12_1sdae")
theme_override_font_sizes/font_size = 40
text = "End Turn
"

[node name="PaidRerollButton" type="Button" parent="BattleUI"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -318.0
offset_top = -139.0
offset_right = -43.0
offset_bottom = -47.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("12_1sdae")
theme_override_font_sizes/font_size = 40
text = "x0 to Reroll"
icon = ExtResource("10_1sdae")
alignment = 0
expand_icon = true

[node name="RerollButton" type="Button" parent="BattleUI"]
unique_name_in_owner = true
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -318.0
offset_top = -268.0
offset_right = -43.0
offset_bottom = -176.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("12_1sdae")
theme_override_font_sizes/font_size = 40
text = "Reroll
00:00
"

[node name="DrawPileButton" parent="BattleUI" node_paths=PackedStringArray("counter") instance=ExtResource("11_e41k2")]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 35.0
offset_top = -309.0
offset_right = 135.0
offset_bottom = -209.0
grow_vertical = 0
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="BattleUI/DrawPileButton"]
layout_mode = 0
offset_left = 92.0
offset_top = 11.0
offset_right = 157.0
offset_bottom = 96.0
theme_override_font_sizes/font_size = 30
text = "99"

[node name="DiscardPileButton" parent="BattleUI" node_paths=PackedStringArray("counter") instance=ExtResource("11_e41k2")]
unique_name_in_owner = true
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 37.0
offset_top = -147.0
offset_right = 137.0
offset_bottom = -47.0
grow_vertical = 0
texture_normal = ExtResource("12_jtj6a")
texture_hover = ExtResource("13_6vt2j")
counter = NodePath("Counter")

[node name="Counter" type="Label" parent="BattleUI/DiscardPileButton"]
layout_mode = 0
offset_left = 92.0
offset_top = 11.0
offset_right = 157.0
offset_bottom = 96.0
theme_override_font_sizes/font_size = 30
text = "99"

[node name="TokenUI" parent="BattleUI" instance=ExtResource("10_odhhd")]

[node name="WarningUI" parent="BattleUI" instance=ExtResource("11_1sdae")]

[node name="ReadyButton" type="Button" parent="BattleUI"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -184.0
offset_right = 184.0
offset_bottom = 81.0
grow_horizontal = 2
theme = SubResource("Theme_1sdae")
text = "READY"

[node name="FPS" type="RichTextLabel" parent="BattleUI"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -90.0
offset_top = 34.0
offset_bottom = 79.0
grow_horizontal = 0
theme_override_font_sizes/normal_font_size = 30
text = "60"

[node name="PassiveIncomeTimer" type="Timer" parent="BattleUI"]
unique_name_in_owner = true

[node name="RerollTimer" type="Timer" parent="BattleUI"]
wait_time = 60.0
one_shot = true

[node name="CardPileViews" type="CanvasLayer" parent="."]
layer = 2

[node name="DrawPileView" parent="CardPileViews" instance=ExtResource("16_m0ppn")]
unique_name_in_owner = true
visible = false

[node name="DiscardPileView" parent="CardPileViews" instance=ExtResource("16_m0ppn")]
unique_name_in_owner = true
visible = false

[connection signal="area_entered" from="CardDropArea" to="CardTargetSelector" method="_on_card_drop_area_area_entered"]
[connection signal="area_exited" from="CardDropArea" to="CardTargetSelector" method="_on_card_drop_area_area_exited"]
[connection signal="timeout" from="BattleUI/RerollTimer" to="BattleUI" method="_on_reroll_timer_timeout"]
